// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table :props :props.border, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height height = 100 1`] = `
<div>
  <div class="t-table t-table__header--fixed">
    <div class="t-table-content">
      <div class="t-table__header">
        <table style="width: 100%;">
          <colgroup>
            <col>
            <col>
            <col>
          </colgroup>
          <thead columnsprops="[object Object],[object Object],[object Object]">
            <tr>
              <td style="" class="" key="id" colspan="1" rowspan="1">id</td>
              <td style="" class="" key="type" colspan="1" rowspan="1">类型</td>
              <td style="" class="" key="value" colspan="1" rowspan="1">取值</td>
            </tr>
          </thead>
        </table>
      </div>
      <div class="t-table__body" style="max-height: 100px;">
        <table style="width: 100%;">
          <colgroup>
            <col>
            <col>
            <col>
          </colgroup>
          <tbody class="table-body">
            <tr class="">
              <td style="" class="" key="id" length="3">1</td>
              <td style="" class="" key="type" length="3">Number</td>
              <td style="" class="" key="value" length="3">1</td>
            </tr>
            <tr class="">
              <td style="" class="" key="id" length="3">2</td>
              <td style="" class="" key="type" length="3">Number</td>
              <td style="" class="" key="value" length="3">2</td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table :props :props.border, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "default", verticalAlign="bottom" 1`] = `
<div>
  <div class="t-table t-table-valign__bottom">
    <div class="t-table-content">
      <table>
        <colgroup></colgroup>
        <thead columnsprops="">
          <tr></tr>
        </thead>
      </table>
    </div><b>暂无数据</b>
  </div>
</div>
`;

exports[`Table :props :props.border, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "large", verticalAlign="top" 1`] = `
<div>
  <div class="t-table t-size-l t-table-valign__top">
    <div class="t-table-content">
      <table>
        <colgroup></colgroup>
        <thead columnsprops="">
          <tr></tr>
        </thead>
      </table>
    </div><b>暂无数据</b>
  </div>
</div>
`;

exports[`Table :props :props.border, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "small", verticalAlign="middle" 1`] = `
<div>
  <div class="t-table t-table--bordered t-table--striped t-table--hoverable t-size-s">
    <div class="t-table-content">
      <table>
        <colgroup>
          <col>
          <col>
          <col>
        </colgroup>
        <thead columnsprops="[object Object],[object Object],[object Object]">
          <tr>
            <td style="" class="" key="id" colspan="1" rowspan="1">id</td>
            <td style="" class="" key="type" colspan="1" rowspan="1">类型</td>
            <td style="" class="" key="value" colspan="1" rowspan="1">取值</td>
          </tr>
        </thead>
        <tbody class="table-body">
          <tr class="">
            <td style="" class="" key="id" length="3">1</td>
            <td style="" class="" key="type" length="3">Number</td>
            <td style="" class="" key="value" length="3">1</td>
          </tr>
          <tr class="">
            <td style="" class="" key="id" length="3">2</td>
            <td style="" class="" key="type" length="3">Number</td>
            <td style="" class="" key="value" length="3">2</td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` is undefined 1`] = `
<div>
  <div class="t-table">
    <div class="t-table-content">
      <table>
        <colgroup></colgroup>
        <thead columnsprops="">
          <tr></tr>
        </thead>
      </table>
    </div><b>暂无数据</b>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` with align, width, minWidth and ellipsis 1`] = `
<div>
  <div class="t-table">
    <div class="t-table-content">
      <table>
        <colgroup>
          <col style="text-overflow: ellipsis; display: -webkit-box; overflow: hidden; text-align: left; width: 100px; min-width: 200px;;">
          <col>
          <col>
        </colgroup>
        <thead columnsprops="[object Object],[object Object],[object Object]">
          <tr>
            <td style="text-align: left;" class="" key="id" colspan="1" rowspan="1">id</td>
            <td style="" class="" key="type" colspan="1" rowspan="1">类型</td>
            <td style="" class="" key="value" colspan="1" rowspan="1">取值</td>
          </tr>
        </thead>
        <tbody class="table-body">
          <tr class="">
            <td style="text-align: left;" class="" key="id" length="3">1</td>
            <td style="" class="" key="type" length="3">Number</td>
            <td style="" class="" key="value" length="3">1</td>
          </tr>
          <tr class="">
            <td style="text-align: left;" class="" key="id" length="3">2</td>
            <td style="" class="" key="type" length="3">Number</td>
            <td style="" class="" key="value" length="3">2</td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` with children 1`] = `
<div>
  <div class="t-table">
    <div class="t-table-content">
      <table>
        <colgroup>
          <col>
          <col>
        </colgroup>
        <thead columnsprops="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]">
          <tr>
            <td style="" class="" colspan="4" rowspan="1">属性及说明</td>
            <td style="" class="" colspan="2" rowspan="1">属性及说明</td>
          </tr>
          <tr>
            <td style="text-align: left;" class="" key="platform" colspan="1" rowspan="2">平台</td>
            <td style="" class="" colspan="3" rowspan="1">类型及默认值</td>
            <td style="text-align: left;" class="" key="property" colspan="1" rowspan="2">属性</td>
            <td style="text-align: left;" class="" key="description" colspan="1" rowspan="2">说明</td>
          </tr>
          <tr>
            <td style="text-align: left;" class="" key="type" colspan="1" rowspan="1">类型</td>
            <td style="text-align: left;" class="" key="default" colspan="1" rowspan="1">默认值</td>
            <td style="text-align: left;" class="" key="needed" colspan="1" rowspan="1">是否必传</td>
          </tr>
        </thead>
        <tbody class="table-body">
          <tr class="">
            <td style="text-align: left;" class="" key="platform" length="6">公有</td>
            <td style="text-align: left;" class="" key="type" length="6">any[]</td>
            <td style="text-align: left;" class="" key="default" length="6">[]</td>
            <td style="text-align: left;" class="" key="needed" length="6">Y</td>
            <td style="text-align: left;" class="" key="property" length="6">data</td>
            <td style="text-align: left;" class="" key="description" length="6">数据源</td>
          </tr>
          <tr class="">
            <td style="text-align: left;" class="" key="platform" length="6">公有</td>
            <td style="text-align: left;" class="" key="type" length="6">String</td>
            <td style="text-align: left;" class="" key="default" length="6">-1</td>
            <td style="text-align: left;" class="" key="needed" length="6">Y</td>
            <td style="text-align: left;" class="" key="property" length="6">rowkey</td>
            <td style="text-align: left;" class="" key="description" length="6">指定rowkey</td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` with fixed column 1`] = `
<div>
  <div class="t-table t-table__cell--fixed t-table--has-fixed">
    <div class="t-table-content">
      <div class="t-table__header">
        <table style="width: 100%;">
          <colgroup>
            <col>
            <col>
            <col>
          </colgroup>
          <thead columnsprops="[object Object],[object Object],[object Object]">
            <tr>
              <td style="position: sticky;left: 0px;" class="t-table__cell--fixed-left t-table__cell--fixed-left-last" key="id" colspan="1" rowspan="1">id</td>
              <td style="" class="" key="type" colspan="1" rowspan="1">类型</td>
              <td style="" class="" key="value" colspan="1" rowspan="1">取值</td>
            </tr>
          </thead>
        </table>
      </div>
      <div class="t-table__body" style="max-height: auto;">
        <table style="width: 100%;">
          <colgroup>
            <col>
            <col>
            <col>
          </colgroup>
          <tbody class="table-body">
            <tr class="">
              <td style="position: sticky;left: 0px;" class="t-table__cell--fixed-left t-table__cell--fixed-left-last" key="id" length="3">1</td>
              <td style="" class="" key="type" length="3">Number</td>
              <td style="" class="" key="value" length="3">1</td>
            </tr>
            <tr class="">
              <td style="position: sticky;left: 0px;" class="t-table__cell--fixed-left t-table__cell--fixed-left-last" key="id" length="3">2</td>
              <td style="" class="" key="type" length="3">Number</td>
              <td style="" class="" key="value" length="3">2</td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
